add custom class

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,6 +60,18 @@
 
 @layer components {
   .border-test {
-    @apply border border-2 border-white dark:border-white;
+    @apply border border-muted-foreground  dark:border-muted-foreground;
+  }
+  .normal-sentences {
+    @apply text-sm text-foreground dark:text-foreground md:text-base lg:text-lg;
+  }
+  .large-sentences {
+    @apply text-xl text-foreground dark:text-foreground md:text-3xl lg:text-5xl;
+  }
+  .medium-sentences {
+    @apply text-lg text-foreground dark:text-foreground sm:text-xl md:text-2xl;
+  }
+  .border-image {
+    @apply shadow-[13px_-13px] shadow-primary;
   }
 }
